--- a/styles.css
+++ b/styles.css
@@ -81,6 +81,29 @@ body {
 /* Left Side End */
 
 /* Right Side */
+
+.plants {
+  background-image: url(/images/leaf.jpg);
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.travels {
+  background-image: url(/images/travel.jpg);
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.lifestyle {
+  background-image: url(/images/hat.jpg);
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
 .info-section {
   /* padding: 0 5rem; */
   /* padding-right: 3.5rem; */
@@ -105,7 +128,7 @@ body {
   font-family: "Roboto", sans-serif;
   text-decoration: none;
   cursor: pointer;
-  background-color: rgb(45, 51, 51);
+  /* background-color: rgb(45, 51, 51); */
   color: #ddd;
   transition: 0.3s;
   -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
@@ -113,13 +136,17 @@ body {
 }
 
 .btn:hover {
-  background-color: rgb(206, 206, 206);
-  color: #125688;
+  background-color: rgb(255, 255, 255);
+  color: #fafafa;
+  opacity: 0.7;
+  -webkit-filter: grayscale(80%); /* Safari 6.0 - 9.0 */
+  filter: grayscale(80%);
 }
 
 @media screen and (max-width: 700px) {
   .btn {
-    padding: 5rem 3.5rem;
+    /* padding: 5rem 3.5rem; */
+    padding: 4rem 2.5rem;
     margin: 0 0.5rem 0.25rem;
   }
   .flex-container {
@@ -128,28 +155,6 @@ body {
   .button-section {
     padding: 0;
   }
-}
-
-.plants {
-  background-image: url(/images/leaf.jpg);
-  background-attachment: fixed;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-.travels {
-  background-image: url(/images/travel.jpg);
-  background-attachment: fixed;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-.lifestyle {
-  background-image: url(/images/hat.jpg);
-  background-attachment: fixed;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
 }
 
 /* Coming Soon */
