--- a/styles.css
+++ b/styles.css
@@ -10,10 +10,11 @@ body {
 
 .flex-container {
   display: flex;
+  flex-direction: column;
 }
 .flex-item {
   flex: 50%;
-  padding: 5.5rem 0;
+  /* padding: 5.5rem 0; */
 }
 
 /* Left Section */
@@ -24,6 +25,7 @@ body {
 
 .main-img {
   width: 75%;
+  border-radius: 2rem;
   min-width: 200px;
   -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
   filter: grayscale(100%);
@@ -105,25 +107,26 @@ body {
 }
 
 .info-section {
-  /* padding: 0 5rem; */
-  /* padding-right: 3.5rem; */
   display: flex;
+  flex-direction: row;
+  justify-content: center;
   flex: 33%;
-  flex-direction: column;
+  margin-top: 3rem;
   align-items: center;
   background: rgb(36, 36, 36);
 }
 
 .button-section {
-  padding: 0 5rem;
   display: flex;
-  flex-direction: column;
+  justify-content: center;
+  flex-wrap: wrap;
 }
 .btn {
-  padding: 8rem 12rem;
-  margin-bottom: 4rem;
+  padding: 4rem 6rem;
+  margin: 0 2rem 4rem 2rem;
+  border-radius: 2rem;
   font-size: 3rem;
-  text-align: left;
+  text-align: center;
   line-height: normal;
   font-family: "Roboto", sans-serif;
   text-decoration: none;
@@ -147,7 +150,7 @@ body {
   .btn {
     /* padding: 5rem 3.5rem; */
     padding: 4rem 2.5rem;
-    margin: 0 0.5rem 0.25rem;
+    margin: 0.5rem 0.5rem;
   }
   .flex-container {
     padding-right: 0.5rem;
