--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ body {
   width: 100%;
   height: auto;
   box-sizing: border-box;
-  background: rgb(36, 36, 36);
+  background: rgb(13, 40, 92);
 }
 
 .flex-container {
@@ -20,12 +20,13 @@ body {
 /* Left Section */
 .img-section {
   text-align: center;
-  background: rgb(36, 36, 36);
+  background: rgb(13, 40, 92);
 }
 
 .main-img {
   width: 75%;
   border-radius: 2rem;
+  box-shadow: 5px 10px 18px #888888;
   min-width: 200px;
   -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
   filter: grayscale(100%);
@@ -111,9 +112,9 @@ body {
   flex-direction: row;
   justify-content: center;
   flex: 33%;
-  margin-top: 3rem;
+  margin: 3rem 3rem;
   align-items: center;
-  background: rgb(36, 36, 36);
+  background: rgb(13, 40, 92);
 }
 
 .button-section {
@@ -125,6 +126,7 @@ body {
   padding: 4rem 6rem;
   margin: 0 2rem 4rem 2rem;
   border-radius: 2rem;
+  box-shadow: 5px 10px 18px #888888;
   font-size: 3rem;
   text-align: center;
   line-height: normal;
@@ -148,9 +150,10 @@ body {
 
 @media screen and (max-width: 700px) {
   .btn {
-    /* padding: 5rem 3.5rem; */
-    padding: 4rem 2.5rem;
+    padding: 1.5rem 0.25rem;
+    border-radius: 1.75rem;
     margin: 0.5rem 0.5rem;
+    font-size: 1.5rem;
   }
   .flex-container {
     padding-right: 0.5rem;
@@ -161,6 +164,12 @@ body {
 }
 
 /* Coming Soon */
+.coming-soon {
+  padding: 8rem 0;
+  background-image: url(/images/axolotl.png);
+  background-repeat: no-repeat;
+  background-position: center;
+}
 .soon-text {
   text-align: center;
   color: #ddd;
