--- a/styles.css
+++ b/styles.css
@@ -92,6 +92,11 @@ body {
     opacity: 1;
   }
 }
+@media screen and (max-width: 800px) {
+  #header-section {
+    padding: 10rem 0;
+  }
+}
 /* HEADER END */
 /* About section START */
 #about-section {
@@ -281,7 +286,7 @@ body {
 .card {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   padding: 2rem;
-  border-radius: 2rem;
+  border-radius: 10px;
   text-align: center;
   background-color: rgba(13, 41, 92, 0.603);
 }
@@ -348,12 +353,12 @@ footer {
   text-decoration: none;
   text-align: center;
   font-size: 0.75rem;
-  color: rgb(23, 53, 107);
+  color: rgb(42, 71, 126);
   margin-bottom: 5px;
 }
 
 footer a {
   text-decoration: none;
-  color: rgb(23, 53, 107);
+  color: rgb(42, 71, 126);
 }
 /* Footer End */
